# homelab

./: .gitignore  GITHUB_SETUP.md  GITOPS_WORKFLOW.md  LOCAL_DEPLOYMENT.md  MANUAL_SYNC_WORKFLOW.md  README.md  WAZUH-HYBRID-GUIDE.md  argocd-ingress.yaml  deploy-to-pi.sh  deploy.sh  mealie-shared-storage.yaml  root-app.yaml  setup-github.sh
.github/: CODEOWNERS  dependabot.yml
argocd/: Chart.yaml  argocd-ingress.yaml  github-repository-secret.yaml.template  github-secret.yaml  server-lb.yaml  values.yaml
argocd-applications/: argocd-cm.yaml  argocd-dex-config.yaml  argocd-rbac-config.yaml  argocd-rbac-policy.csv  argocd.yaml  cert-manager.yaml  coredns-config.yaml  coredns.yaml  homelab-command-center.yaml  mealie.yaml  metallb-config.yaml  metallb.yaml  monitoring.yaml  namespaces.yaml  nginx-ingress.yaml  root-app.yaml  tailscale.yaml  traefik-helm.yaml  traefik-ingress.yaml  traefik.yaml  vaultwarden.yaml  wazuh.yaml
certmanager/: clusterissuer.yaml  letsencrypt-dns.yaml
config/: k3s.service.env  resolv.custom.conf
coredns/: coredns-deployment.yaml  coredns.yaml
homelab-command-center/: Chart.yaml  Dockerfile  (+6 more)
homelab-command-center/src/: .dockerignore  Dockerfile  pyproject.toml
homelab-command-center/src/app/: __init__.py  config.py  database.py  main.py
homelab-command-center/src/app/frontend/templates/: dashboard.html
homelab-command-center/src/app/routers/: monitoring.py
homelab-command-center/src/app/services/: cluster_monitoring.py  health_check.py  kubernetes.py  redis.py
homelab-command-center/src/app/workers/: celery_app.py  tasks.py
(+150 files in other folders)
