[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
authors = [
  { name = "Colin Cook", email = "cook.colin13@gmail.com" }
]
name = "homelab-command-center"
version = "0.0.1"
description = "HomeLab monitoring and management platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "kubernetes>=28.1.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    "requests>=2.31.0",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.2",
    "websockets>=12.0",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "slack-sdk>=3.23.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "yoyo-migrations>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "asyncpg>=0.30.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py311']
